Descripción DK.Interiores

--- a/index.html
+++ b/index.html
@@ -4,10 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meushar-Felicidad organizacional</title>
+    <title>DK.Interiores</title>
 </head>
 <body>
-    <h1>Diseñamos experiencias</h1>
-    <p>Diseñamos, generamos y facilitamos experiencias a través de formatos personalizados en capacitaciones vivenciales</p>
+    <h1>Diseñamos espacios</h1>
+    <p>Nuestro propósito está en crear esos rincones que invitar a compartir</p>
+    <ul>
+        <li> 
+            <a href="./pages/servicios.html">Servicios</a></li>
+        <li>
+            <a href="./pages/equipo.html">Equipo</a></li>
+        <li>
+            <a href="./pages/blog.html"></a>Blog</li>
+        <li>
+            <a href="./pages/contacto.html">Contacto</a></li>
+    </ul>
 </body>
 </html>
