CONTENIDO-Wireframe base

--- a/index.html
+++ b/index.html
@@ -7,17 +7,40 @@
     <title>DK.Interiores</title>
 </head>
 <body>
-    <h1>Diseñamos espacios</h1>
-    <p>Nuestro propósito está en crear esos rincones que invitar a compartir</p>
-    <ul>
-        <li> 
-            <a href="./pages/servicios.html">Servicios</a></li>
-        <li>
-            <a href="./pages/equipo.html">Equipo</a></li>
-        <li>
-            <a href="./pages/blog.html"></a>Blog</li>
-        <li>
-            <a href="./pages/contacto.html">Contacto</a></li>
-    </ul>
+    <header>
+        <img src="./assets/img/Isologo.png" width="45px" alt="isologo">
+        <nav>
+            <ul>
+                <li>
+                    <a href="./index.html">Home</li>
+                <li> 
+                    <a href="./pages/servicios.html">Servicios</a></li>
+                <li>
+                    <a href="./pages/equipo.html">Equipo</a></li>
+                <li>
+                    <a href="./pages/blog.html">Blog</a></li>
+                <li>
+                    <a href="./pages/contacto.html">Contacto</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <h1>DISEÑOS SIMPLES Y ELEGANTES</h1>
+        <p>Nuestro propósito está en diseñar esos rincones que invitan a compartir</p>
+        <div>
+            <img src="./assets/img/inicio/ambientes-portada-1.jpg" alt="ambientes-portada-1" width="300px">
+            <img src="./assets/img/inicio/ambientes-portada-2.jpg" alt="ambientes-portada-2" width="300px">
+            <img src="./assets/img/inicio/ambientes-portada-3.jpg" alt="ambientes-portada-3" width="340px">
+            <img src="./assets/img/inicio/ambientes-portada-4.jpg" alt="ambientes-portada-4" width="340px">
+        </div>
+        <br>
+        <button>Volver arriba</button>
+    </main>
+    <footer>
+        <a href="https://www.instagram.com/dk.interioresyespacios">dk.interioresyespacios</a>
+        <br>
+        <a href="https://wa.link/8k9u4w">(3541)389085</a>
+        <p>dk.interioresyespacios@gmail.com</p>
+    </footer>
 </body>
 </html>
