--- a/pages/blog.html
+++ b/pages/blog.html
@@ -4,9 +4,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>DK.Interiores / Blog</title>
 </head>
 <body>
-    
+    <header>
+        <img src="./assets/img/Isologo.png" width="45px" alt="isologo">
+        <nav>
+            <ul>
+                <li>
+                    <a href="../index.html">Home</li>
+                <li> 
+                    <a href="./servicios.html">Servicios</a></li>
+                <li>
+                    <a href="./equipo.html">Equipo</a></li>
+                <li>
+                    <a href="./blog.html">Blog</a></li>
+                <li>
+                    <a href="./contacto.html">Contacto</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <h1>¡TODOS LOS CONSEJOS QUE NECESITÁS!</h1>
+        <p>Te compartimos nuestros tips y recomendaciones para que puedas crear espacios a tu estilo.</p>
+        <br>
+        <img src="../assets/img/blog-1.jpg" alt="blog-1-eventos" width="300px">
+        <p><strong>Brief del consejo de la semana</strong></p>
+    </main>
+    <footer>
+        <a href="https://www.instagram.com/dk.interioresyespacios">dk.interioresyespacios</a>
+        <br>
+        <a href="https://wa.link/8k9u4w">(3541)389085</a>
+        <p>dk.interioresyespacios@gmail.com</p>
+    </footer>
 </body>
 </html>
