--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,9 +4,46 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>DK.Interiores / Contacto</title>
 </head>
 <body>
-    
+    <header>
+        <img src="./assets/img/Isologo.png" width="45px" alt="isologo">
+        <nav>
+            <ul>
+                <li>
+                    <a href="../index.html">Home</li>
+                <li> 
+                    <a href="./servicios.html">Servicios</a></li>
+                <li>
+                    <a href="./equipo.html">Equipo</a></li>
+                <li>
+                    <a href="./blog.html">Blog</a></li>
+                <li>
+                    <a href="./contacto.html">Contacto</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <h1>CONTACTÁNOS, ESTAMOS PARA ASESORARTE</h1>
+        <p>Nuestro equipo está a diposición para brindarte la atención personalizada que tus espacios requieren, ¡escribinos!</p>
+        <div>
+            <form action="">
+                <label for="nombre-apellido"></label><input type="text" name="nombre-apellido" placeholder="Nombre y Apellido">
+                <label for="email"></label><input type="email" name="email"placeholder="Email">
+                <label for="celular"></label><input type="tel" name="celular" placeholder="Celular">
+                <label for="consulta"></label><input type="text" name="consulta" placeholder="Dejanos aquí tu consulta">
+                <br>
+                <input type="submit" value="Enviar">
+            </form>
+        </div>
+        <br>
+    </main>
+    <footer>
+        <a href="https://www.instagram.com/dk.interioresyespacios">dk.interioresyespacios</a>
+        <br>
+        <a href="https://wa.link/8k9u4w">(3541)389085</a>
+        <p>dk.interioresyespacios@gmail.com</p>
+    </footer>
 </body>
 </html>
