--- a/pages/equipo.html
+++ b/pages/equipo.html
@@ -5,37 +5,52 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DK.Interiores / Equipo</title>
+    <!--CSS-->
+    <link rel="stylesheet" href="../css/estilos.css">
 </head>
 <body>
     <header>
-        <img src="./assets/img/Isologo.png" width="45px" alt="isologo">
-        <nav>
-            <ul>
-                <li>
-                    <a href="../index.html">Home</li>
-                <li> 
-                    <a href="./servicios.html">Servicios</a></li>
-                <li>
-                    <a href="./equipo.html">Equipo</a></li>
-                <li>
-                    <a href="./blog.html">Blog</a></li>
-                <li>
-                    <a href="./contacto.html">Contacto</a></li>
-            </ul>
-        </nav>
+        <div class="contenedor-header">
+            <img src="./assets/img/Isologo.png" width="45px" alt="isologo">
+            <nav> <!--Barra de navegación principal-->
+                <ul>
+                    <li>
+                        <a href="../index.html">Home |</li>
+                    <li> 
+                        <a href="./servicios.html">Servicios |</a></li>
+                    <li>
+                        <a href="./equipo.html">Equipo |</a></li>
+                    <li>
+                        <a href="./blog.html">Blog |</a></li>
+                    <li>
+                        <a href="./contacto.html">Contacto |</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
-    <main>
-        <h1>EL DETRÁS DE ESCENA</h1>
-        <p>Somos un estudio de diseño de interiores radicado en la ciudad de Villa Carlos Paz, Córdoba, Argentina.</p>
+    <main  class="grilla__equipo">
+        <section class="portada__texto">
+            <h1 class="titulo">EL DETRÁS DE ESCENA</h1>
+            <p class="subtitulo">Somos un estudio de diseño de interiores radicado en la ciudad de Villa Carlos Paz, Córdoba, Argentina.</p>
+        </section>
         <br>
-        <img src="../assets/img/equipo.jpg" alt="equipo" width="300px">
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
+        <section class="contenido__equipo">
+            <div class="contenido__equipo-foto">
+                <img src="../assets/img/equipo.jpg" alt="equipo" width="500px">
+            </div>
+            <div class="contenido__equipo--presentacion">
+                <h1>Melina y Daniela</h1>
+                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
+            </div>
+        </section>
     </main>
     <footer>
-        <a href="https://www.instagram.com/dk.interioresyespacios">dk.interioresyespacios</a>
-        <br>
-        <a href="https://wa.link/8k9u4w">(3541)389085</a>
-        <p>dk.interioresyespacios@gmail.com</p>
+        <div class="contenedor-footer">
+            <a href="https://www.instagram.com/dk.interioresyespacios">dk.interioresyespacios</a>
+            <br>
+            <a href="https://wa.link/8k9u4w">(3541)389085</a>
+            <p>dk.interioresyespacios@gmail.com</p>
+        </div>
     </footer>
 </body>
 </html>
