--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -5,29 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DK.Interiores / Servicios</title>
+    <!--CSS-->
+    <link rel="stylesheet" href="../css/estilos.css">
 </head>
 <body>
     <header>
-        <img src="./assets/img/Isologo.png" width="45px" alt="isologo">
-        <nav>
-            <ul>
-                <li>
-                    <a href="../index.html">Home</li>
-                <li> 
-                    <a href="./servicios.html">Servicios</a></li>
-                <li>
-                    <a href="./equipo.html">Equipo</a></li>
-                <li>
-                    <a href="./blog.html">Blog</a></li>
-                <li>
-                    <a href="./contacto.html">Contacto</a></li>
-            </ul>
-        </nav>
+        <div class="contenedor-header">
+            <img src="./assets/img/Isologo.png" width="45px" alt="isologo">
+            <nav> <!--Barra de navegación principal-->
+                <ul>
+                    <li>
+                        <a href="../index.html">Home |</li>
+                    <li> 
+                        <a href="./servicios.html">Servicios |</a></li>
+                    <li>
+                        <a href="./equipo.html">Equipo |</a></li>
+                    <li>
+                        <a href="./blog.html">Blog |</a></li>
+                    <li>
+                        <a href="./contacto.html">Contacto |</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
-    <main>
-        <h1>NUESTROS SERVICIOS</h1>
-        <p>Diseño y decoración de interiores y espacios</p>
-        <ul>
+    <main class="portada-principal">
+        <section>
+            <h1 class="titulo">NUESTROS SERVICIOS</h1>
+            <p class="subtitulo">Diseño y decoración de interiores y espacios</p>
+        </section>
+        <ul class="contenido">
             <li>Hogar</li>
             <li>Oficinas / Locales</li>
             <li>Diseño de muebles</li>
@@ -36,10 +42,12 @@
         </ul>
     </main>
     <footer>
-        <a href="https://www.instagram.com/dk.interioresyespacios">dk.interioresyespacios</a>
-        <br>
-        <a href="https://wa.link/8k9u4w">(3541)389085</a>
-        <p>dk.interioresyespacios@gmail.com</p>
+        <div class="contenedor-footer">
+            <a href="https://www.instagram.com/dk.interioresyespacios">dk.interioresyespacios</a>
+            <br>
+            <a href="https://wa.link/8k9u4w">(3541)389085</a>
+            <p>dk.interioresyespacios@gmail.com</p>
+        </div>
     </footer>
 </body>
 </html>
