--- a/index.html
+++ b/index.html
@@ -5,42 +5,83 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DK.Interiores</title>
+    <!--CSS-->
+    <link rel="stylesheet" href="./css/estilos.css">
 </head>
 <body>
     <header>
-        <img src="./assets/img/Isologo.png" width="45px" alt="isologo">
-        <nav>
-            <ul>
-                <li>
-                    <a href="./index.html">Home</li>
-                <li> 
-                    <a href="./pages/servicios.html">Servicios</a></li>
-                <li>
-                    <a href="./pages/equipo.html">Equipo</a></li>
-                <li>
-                    <a href="./pages/blog.html">Blog</a></li>
-                <li>
-                    <a href="./pages/contacto.html">Contacto</a></li>
-            </ul>
-        </nav>
+        <div class="contenedor-header">
+            <img class="contenedor-header__isologo" src="./assets/img/isologo-blanco.png" alt="isologo">
+            <!--Barra de navegación FIJA-->
+            <!--PAGES (Ver si incluimos alguna página para DECORACIÓN de espacios)-->
+                <nav>
+                    <ul class="menu">
+                        <li class="menu__item">
+                            <a href="./index.html">Home |</li>
+                        <li class="menu__item"> 
+                            <a href="./pages/servicios.html">Servicios |</a></li>
+                        <li class="menu__item">
+                            <a href="./pages/equipo.html">Equipo |</a></li>
+                        <li class="menu__item">
+                            <a href="./pages/blog.html">Blog |</a></li>
+                        <li class="menu__item">
+                            <a href="./pages/contacto.html">Contacto |</a></li>
+                    </ul>
+                </nav>
+        </div>
     </header>
-    <main>
-        <h1>DISEÑOS SIMPLES Y ELEGANTES</h1>
-        <p>Nuestro propósito está en diseñar esos rincones que invitan a compartir</p>
-        <div>
+    <!-- PRIMER GRID
+    <main class="grid__template">
+        <section class="portada-texto">
+            <h1 class="titulo">DISEÑOS SIMPLES Y ELEGANTES</h1>
+            <p class="subtitulo">Nuestro propósito está en diseñar esos rincones que invitan a compartir</p>
+        </section>
+        <div class="contenido">
             <img src="./assets/img/inicio/ambientes-portada-1.jpg" alt="ambientes-portada-1" width="300px">
             <img src="./assets/img/inicio/ambientes-portada-2.jpg" alt="ambientes-portada-2" width="300px">
             <img src="./assets/img/inicio/ambientes-portada-3.jpg" alt="ambientes-portada-3" width="340px">
             <img src="./assets/img/inicio/ambientes-portada-4.jpg" alt="ambientes-portada-4" width="340px">
         </div>
-        <br>
-        <button>Volver arriba</button>
+        <div id="paleta-cromatica">
+            <div id="primer-paleta"></div>
+            <div id="segunda-paleta"></div>
+            <div id="tercer-paleta"></div>
+            <div id="cuarta-paleta"></div>
+        </div>
     </main>
-    <footer>
-        <a href="https://www.instagram.com/dk.interioresyespacios">dk.interioresyespacios</a>
-        <br>
-        <a href="https://wa.link/8k9u4w">(3541)389085</a>
-        <p>dk.interioresyespacios@gmail.com</p>
+    -->
+    <!--GRID FINAL (Por definición de Áreas)-->
+    <main id="grilla">
+        <div class="portada__texto">
+            <h1 class="titulo">DISEÑOS SIMPLES Y ELEGANTES</h1>
+            <p class="subtitulo">Nuestro propósito está en diseñar esos rincones que invitan a compartir</p>
+        </div>
+        <div id="paleta-cromatica">
+            <div id="primer-paleta"></div>
+            <div id="segunda-paleta"></div>
+            <div id="tercer-paleta"></div>
+            <div id="cuarta-paleta"></div>
+        </div>
+        <section class="ambientes-portada__1">
+            <img src="./assets/img/inicio/ambientes-portada-1.jpg" alt="ambientes-portada-1" width="300px">
+        </section>
+        <section class="ambientes-portada__2">
+            <img src="./assets/img/inicio/ambientes-portada-2.jpg" alt="ambientes-portada-2" width="300px">
+        </section>
+        <section class="ambientes-portada__3">
+            <img src="./assets/img/inicio/ambientes-portada-3.jpg" alt="ambientes-portada-3" width="340px">
+        </section>
+        <section class="ambientes-portada__4">
+            <img src="./assets/img/inicio/ambientes-portada-4.jpg" alt="ambientes-portada-4" width="340px">
+        </section>
+    </main>
+    <footer> <!--Agregar NEWSLETTER y formas de pago-->
+        <div class="contenedor-footer">
+            <a href="https://www.instagram.com/dk.interioresyespacios">dk.interioresyespacios</a>
+            <br>
+            <a href="https://wa.link/8k9u4w">(3541)389085</a>
+            <p>dk.interioresyespacios@gmail.com</p>
+        </div>
     </footer>
 </body>
 </html>
