--- a/pages/blog.html
+++ b/pages/blog.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DK.Interiores / Blog</title>
     <!--CSS-->
+    <!--CLASES CORREGIDAS-->
     <link rel="stylesheet" href="../css/estilos.css">
 </head>
 <body>
