--- a/index.html
+++ b/index.html
@@ -6,31 +6,77 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DK.Interiores</title>
     <!--CSS-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" 
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/estilos.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
     <header>
         <div class="contenedor-header">
             <img class="contenedor-header__isologo" src="./assets/img/isologo-blanco.png" alt="isologo">
             <!--Barra de navegación FIJA-->
-            <!--PAGES (Ver si incluimos alguna página para DECORACIÓN de espacios)-->
+            <!--PAGES-->
                 <nav>
-                    <ul class="menu">
-                        <li class="menu__item">
-                            <a href="./index.html">Home |</li>
-                        <li class="menu__item"> 
-                            <a href="./pages/servicios.html">Servicios |</a></li>
-                        <li class="menu__item">
-                            <a href="./pages/equipo.html">Equipo |</a></li>
-                        <li class="menu__item">
-                            <a href="./pages/blog.html">Blog |</a></li>
-                        <li class="menu__item">
-                            <a href="./pages/contacto.html">Contacto |</a></li>
-                    </ul>
+                    <div>
+                        <ul class="menu">
+                            <li class="menu__item">
+                                <a href="./index.html">Home |</li>
+                            <li class="menu__item"> 
+                                <a href="./pages/servicios.html">Servicios |</a></li>
+                            <li class="menu__item">
+                                <a href="./pages/equipo.html">Equipo |</a></li>
+                            <li class="menu__item">
+                                <a href="./pages/blog.html">Blog |</a></li>
+                            <li class="menu__item">
+                                <a href="./pages/contacto.html">Contacto |</a></li>
+                        </ul>
+                    </div>
                 </nav>
         </div>
     </header>
+    <main>
+        <!--iNTRO A LA PÁGINA-->
+        <div class="portada__texto">
+            <h1 class="titulo">DISEÑOS SIMPLES Y ELEGANTES</h1>
+            <p class="subtitulo">Nuestro propósito está en diseñar esos rincones que invitan a compartir</p>
+        </div>
+        <div class="container-fluid">
+            <!--
+                <div id="paleta-cromatica">
+                    <div id="primer-paleta"></div>
+                    <div id="segunda-paleta"></div>
+                    <div id="tercer-paleta"></div>
+                    <div id="cuarta-paleta"></div>
+                </div>
+            -->
+            <div class="row">
+                <div class="col-2">
+                    <section class="ambientes-portada__1">
+                        <img src="./assets/img/inicio/ambientes-portada-1.jpg" alt="ambientes-portada-1" width="300px">
+                    </section>
+                    <div id="primer-paleta"></div>
+                </div>
+                <div class="col-2">
+                    <section class="ambientes-portada__2">
+                        <img src="./assets/img/inicio/ambientes-portada-2.jpg" alt="ambientes-portada-2" width="300px">
+                    </section>
+                    <div id="segunda-paleta"></div>
+                </div>
+                <div class="col-2">
+                    <section class="ambientes-portada__3">
+                        <img src="./assets/img/inicio/ambientes-portada-3.jpg" alt="ambientes-portada-3" width="340px">
+                    </section>
+                    <div id="tercer-paleta"></div>
+                </div>
+                <div class="col-2">
+                    <section class="ambientes-portada__4">
+                        <img src="./assets/img/inicio/ambientes-portada-4.jpg" alt="ambientes-portada-4" width="340px">
+                    </section>
+                    <div id="cuarta-paleta"></div>
+                </div>
+            </div>
+        </div>
+    </main>
     <!-- PRIMER GRID
     <main class="grid__template">
         <section class="portada-texto">
@@ -52,6 +98,7 @@
     </main>
     -->
     <!--GRID FINAL (Por definición de Áreas)-->
+    <!-- MAIN CON GRID
     <main id="grilla">
         <div class="portada__texto">
             <h1 class="titulo">DISEÑOS SIMPLES Y ELEGANTES</h1>
@@ -62,7 +109,7 @@
             <div id="segunda-paleta"></div>
             <div id="tercer-paleta"></div>
             <div id="cuarta-paleta"></div>
-        </div>
+        </div class="container-fluid">
         <section class="ambientes-portada__1">
             <img src="./assets/img/inicio/ambientes-portada-1.jpg" alt="ambientes-portada-1" width="300px">
         </section>
@@ -76,8 +123,9 @@
             <img src="./assets/img/inicio/ambientes-portada-4.jpg" alt="ambientes-portada-4" width="340px">
         </section>
     </main>
-    <footer> <!--Agregar NEWSLETTER y formas de pago-->
-        <div class="contenedor-footer">
+    -->
+    <footer class="contenedor-footer"> <!--Agregar NEWSLETTER y formas de pago-->
+        <div>
             <a href="https://www.instagram.com/dk.interioresyespacios">dk.interioresyespacios</a>
             <br>
             <a href="https://wa.link/8k9u4w">(3541)389085</a>
