--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -7,47 +7,52 @@
     <title>DK.Interiores / Contacto</title>
     <!--CSS-->
     <!--CLASES CORREGIDAS-->
-    <link rel="stylesheet" href="../css/estilos.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="../css/estilos.css">
 </head>
 <body>
     <header>
         <div class="contenedor-header">
             <img src="./assets/img/Isologo.png" width="45px" alt="isologo">
             <nav> <!--Barra de navegación principal-->
-                <ul>
-                    <li>
-                        <a href="../index.html">Home |</li>
-                    <li> 
-                        <a href="./servicios.html">Servicios |</a></li>
-                    <li>
-                        <a href="./equipo.html">Equipo |</a></li>
-                    <li>
-                        <a href="./blog.html">Blog |</a></li>
-                    <li>
-                        <a href="./contacto.html">Contacto |</a></li>
-                </ul>
+                <div>
+                    <ul>
+                        <li>
+                            <a href="../index.html">Home |</li>
+                        <li> 
+                            <a href="./servicios.html">Servicios |</a></li>
+                        <li>
+                            <a href="./equipo.html">Equipo |</a></li>
+                        <li>
+                            <a href="./blog.html">Blog |</a></li>
+                        <li>
+                            <a href="./contacto.html">Contacto |</a></li>
+                    </ul>
+                </div>
             </nav>
         </div>
     </header>
     <main  class="portada-principal">
+        <!--iNTRO A LA PÁGINA-->
         <section class="portada__texto">
             <h1 class="titulo">CONTACTÁNOS, ESTAMOS PARA ASESORARTE</h1>
             <p class="subtitulo">Nuestro equipo está a diposición para brindarte la atención personalizada que tus espacios requieren, ¡escribinos!</p>
         </section>
-            <div class="contenido">
-            <form action="">
-                <label for="nombre-apellido"></label><input type="text" name="nombre-apellido" placeholder="Nombre y Apellido">
-                <label for="email"></label><input type="email" name="email"placeholder="Email">
-                <label for="celular"></label><input type="tel" name="celular" placeholder="Celular">
-                <label for="consulta"></label><input type="text" name="consulta" placeholder="Dejanos aquí tu consulta">
+            <!--FORMULARIO-->
+            <div class="container">
+            <form action="#">
+                <div class="form-group">
+                <label for="nombre-apellido"></label><input type="text" class="form-control" name="nombre-apellido" placeholder="Nombre y Apellido">
+                <label for="email"></label><input type="email" class="form-control"  name="email"placeholder="Email">
+                <label for="celular"></label><input type="tel" class="form-control" name="celular" placeholder="Celular">
+                <label for="consulta"></label><input type="text" class="form-control" name="consulta" placeholder="Dejanos aquí tu consulta">
                 <br>
-                <input type="submit" value="Enviar">
+                <button type="submit" class="btn btn-default">Enviar</button>
             </form>
         </div>
     </main>
     <footer>
-        <div class="contenedor-footer">
+        <div class="container-fluid">
             <a href="https://www.instagram.com/dk.interioresyespacios">dk.interioresyespacios</a>
             <br>
             <a href="https://wa.link/8k9u4w">(3541)389085</a>
