--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -7,30 +7,33 @@
     <title>DK.Interiores / Servicios</title>
     <!--CSS-->
     <!--CLASES CORREGIDAS-->
-    <link rel="stylesheet" href="../css/estilos.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="../css/estilos.css">
 </head>
 <body>
     <header>
         <div class="contenedor-header">
             <img src="./assets/img/Isologo.png" width="45px" alt="isologo">
             <nav> <!--Barra de navegación principal-->
-                <ul>
-                    <li>
-                        <a href="../index.html">Home |</li>
-                    <li> 
-                        <a href="./servicios.html">Servicios |</a></li>
-                    <li>
-                        <a href="./equipo.html">Equipo |</a></li>
-                    <li>
-                        <a href="./blog.html">Blog |</a></li>
-                    <li>
-                        <a href="./contacto.html">Contacto |</a></li>
-                </ul>
+                <div>
+                    <ul>
+                        <li>
+                            <a href="../index.html">Home |</li>
+                        <li> 
+                            <a href="./servicios.html">Servicios |</a></li>
+                        <li>
+                            <a href="./equipo.html">Equipo |</a></li>
+                        <li>
+                            <a href="./blog.html">Blog |</a></li>
+                        <li>
+                            <a href="./contacto.html">Contacto |</a></li>
+                    </ul>
+                </div>
             </nav>
         </div>
     </header>
     <main class="portada-principal">
+        <!--iNTRO A LA PÁGINA-->
         <section>
             <h1 class="titulo">NUESTROS SERVICIOS</h1>
             <p class="subtitulo">Diseño y decoración de interiores y espacios</p>
@@ -44,7 +47,7 @@
         </ul>
     </main>
     <footer>
-        <div class="contenedor-footer">
+        <div class="container-fluid">
             <a href="https://www.instagram.com/dk.interioresyespacios">dk.interioresyespacios</a>
             <br>
             <a href="https://wa.link/8k9u4w">(3541)389085</a>
