Comentarios para seccionar

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -33,7 +33,7 @@
         </div>
     </header>
     <main  class="portada-principal">
-        <!--iNTRO A LA PÁGINA-->
+        <!--INTRO A LA PÁGINA-->
         <section class="portada__texto">
             <h1 class="titulo">CONTACTÁNOS, ESTAMOS PARA ASESORARTE</h1>
             <p class="subtitulo">Nuestro equipo está a diposición para brindarte la atención personalizada que tus espacios requieren, ¡escribinos!</p>
@@ -47,7 +47,7 @@
                 <label for="celular"></label><input type="tel" class="form-control" name="celular" placeholder="Celular">
                 <label for="consulta"></label><input type="text" class="form-control" name="consulta" placeholder="Dejanos aquí tu consulta">
                 <br>
-                <button type="submit" class="btn btn-default">Enviar</button>
+                <button type="submit" class="btn btn-primary">Enviar</button>
             </form>
         </div>
     </main>
