--- a/index.html
+++ b/index.html
@@ -23,6 +23,18 @@
                                 <a href="./index.html">Home |</li>
                             <li class="menu__item"> 
                                 <a href="./pages/servicios.html">Servicios |</a></li>
+                                <!--REVISAR
+                                <div class="dropdown">
+                                    <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
+                                        Servicios
+                                    </button>
+                                    <div class="dropdown-menu">
+                                        <a class="dropdown-item" href="#">Hogar</a>
+                                        <a class="dropdown-item" href="#">Oficinas/Locales</a>
+                                        <a class="dropdown-item" href="#">Eventos sociales y empresariales</a>
+                                    </div>
+                                </div>
+                                -->
                             <li class="menu__item">
                                 <a href="./pages/equipo.html">Equipo |</a></li>
                             <li class="menu__item">
@@ -50,6 +62,7 @@
                 </div>
             -->
             <div class="row">
+                <div class="col-2"></div>
                 <div class="col-2">
                     <section class="ambientes-portada__1">
                         <img src="./assets/img/inicio/ambientes-portada-1.jpg" alt="ambientes-portada-1" width="300px">
@@ -73,6 +86,7 @@
                         <img src="./assets/img/inicio/ambientes-portada-4.jpg" alt="ambientes-portada-4" width="340px">
                     </section>
                     <div id="cuarta-paleta"></div>
+                <div class="col-2"></div>
                 </div>
             </div>
         </div>
