--- a/index.html
+++ b/index.html
@@ -16,34 +16,39 @@
             <img class="contenedor-header__isologo" src="./assets/img/isologo-blanco.png" alt="isologo">
             <!--Barra de navegación FIJA-->
             <!--PAGES-->
-                <nav>
-                    <div>
-                        <ul class="menu">
-                            <li class="menu__item">
-                                <a href="./index.html">Home |</li>
-                            <li class="menu__item"> 
-                                <a href="./pages/servicios.html">Servicios |</a></li>
-                                <!--REVISAR
-                                <div class="dropdown">
-                                    <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
-                                        Servicios
-                                    </button>
-                                    <div class="dropdown-menu">
-                                        <a class="dropdown-item" href="#">Hogar</a>
-                                        <a class="dropdown-item" href="#">Oficinas/Locales</a>
-                                        <a class="dropdown-item" href="#">Eventos sociales y empresariales</a>
-                                    </div>
-                                </div>
-                                -->
-                            <li class="menu__item">
-                                <a href="./pages/equipo.html">Equipo |</a></li>
-                            <li class="menu__item">
-                                <a href="./pages/blog.html">Blog |</a></li>
-                            <li class="menu__item">
-                                <a href="./pages/contacto.html">Contacto |</a></li>
-                        </ul>
+        <div class="container">
+            <ul class="nav">
+                <li class="nav-item">
+                <a class="nav-link" href="./index.html">Home
+                    </a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link" href="./pages/servicios.html">Servicios
+                    </a>
+                </li>
+                <!--REVISAR
+                    <div class="btn-group">
+                        <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
+                        Servicios
+                        </button>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" href="#">Hogar</a>
+                            <a class="dropdown-item" href="#">Oficinas/Locales</a>
+                            <a class="dropdown-item" href="#">Eventos sociales y empresariales</a>
+                        </div>
                     </div>
-                </nav>
+                -->
+                <li class="nav-item">
+                <a class="nav-link" href="./pages/equipo.html">Equipo
+                    </a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link" href="./pages/blog.html">Blog</a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link" href="./pages/contacto.html">Contacto</a>
+                </li>
+            </ul>
         </div>
     </header>
     <main>
@@ -62,7 +67,7 @@
                 </div>
             -->
             <div class="row">
-                <div class="col-2"></div>
+                <div class="col-mg- col-lg-2"></div>
                 <div class="col-2">
                     <section class="ambientes-portada__1">
                         <img src="./assets/img/inicio/ambientes-portada-1.jpg" alt="ambientes-portada-1" width="300px">
