Acomodé líneas de código

--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -14,22 +14,29 @@
     <header>
         <div class="contenedor-header">
             <img src="./assets/img/Isologo.png" width="45px" alt="isologo">
-            <nav> <!--Barra de navegación principal-->
-                <div>
-                    <ul>
-                        <li>
-                            <a href="../index.html">Home |</li>
-                        <li> 
-                            <a href="./servicios.html">Servicios |</a></li>
-                        <li>
-                            <a href="./equipo.html">Equipo |</a></li>
-                        <li>
-                            <a href="./blog.html">Blog |</a></li>
-                        <li>
-                            <a href="./contacto.html">Contacto |</a></li>
+            <!--Barra de navegación principal-->
+            <div class="container">
+                <ul class="nav">
+                    <li class="nav-item">
+                    <a class="nav-link" href="../index.html">Home
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link" href="./servicios.html">Servicios
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./equipo.html">Equipo
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                        <a class="nav-link" href="./blog.html">Blog</a>
+                        </li>
+                        <li class="nav-item">
+                        <a class="nav-link" href="./contacto.html">Contacto</a>
+                        </li>
                     </ul>
-                </div>
-            </nav>
+            </div>
         </div>
     </header>
     <main class="portada-principal">
