--- a/pages/blog.html
+++ b/pages/blog.html
@@ -40,10 +40,11 @@
         </div>
     </header>
     <main  class="portada-principal">
-        <!--iNTRO A LA PÁGINA-->
-        <section class="portada__texto">
+        <!--INTRO A LA PÁGINA-->
+        <section class="container">
+            <div class="col-mg- col-lg-11"></div>
             <h1 class="titulo">¡TODOS LOS CONSEJOS QUE NECESITÁS!</h1>
-            <p class="subtitulo">Te compartimos nuestros tips y recomendaciones para que puedas crear espacios a tu estilo.</p>
+            <div class="col-mg- col-lg-1"></div>
         </section>
         <div class="contenido">
             <img src="../assets/img/blog-1.jpg" alt="blog-1-eventos" width="300px">
