--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -41,9 +41,12 @@
     </header>
     <main  class="portada-principal">
         <!--INTRO A LA PÁGINA-->
-        <section class="portada__texto">
-            <h1 class="titulo">CONTACTÁNOS, ESTAMOS PARA ASESORARTE</h1>
-            <p class="subtitulo">Nuestro equipo está a diposición para brindarte la atención personalizada que tus espacios requieren, ¡escribinos!</p>
+        <section class="container">
+            <div class="col-mg- col-lg-11">
+                <h1 class="titulo">CONTACTÁNOS, ESTAMOS PARA ASESORARTE</h1>
+                <p class="subtitulo">Nuestro equipo está a diposición para brindarte la atención personalizada que tus espacios requieren, ¡escribinos!</p>
+            </div>
+            <div class="col-mg- col-lg-1"></div>
         </section>
             <!--FORMULARIO-->
             <div class="container">
