--- a/pages/equipo.html
+++ b/pages/equipo.html
@@ -40,9 +40,13 @@
         </div>
     </header>
     <main  class="grilla__equipo">
-        <section class="portada__texto">
-            <h1 class="titulo">EL DETRÁS DE ESCENA</h1>
-            <p class="subtitulo">Somos un estudio de diseño de interiores radicado en la ciudad de Villa Carlos Paz, Córdoba, Argentina.</p>
+        <!--INTRO A LA PÁGINA-->
+        <section class="container">
+            <div class="col-mg- col-lg-11">
+                <h1 class="titulo">EL DETRÁS DE ESCENA</h1>
+                <p class="subtitulo">Somos un estudio de diseño de interiores radicado en la ciudad de Villa Carlos Paz, Córdoba, Argentina.</p>
+                <div class="col-mg- col-lg-1"></div>
+            </div>
         </section>
         <br>
         <section class="contenido__equipo">
