--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -40,18 +40,28 @@
         </div>
     </header>
     <main class="portada-principal">
-        <!--iNTRO A LA PÁGINA-->
-        <section>
+        <!--INTRO A LA PÁGINA-->
+        <section class="container">
+            <div class="col-mg- col-lg-11"></div>
             <h1 class="titulo">NUESTROS SERVICIOS</h1>
             <p class="subtitulo">Diseño y decoración de interiores y espacios</p>
+            <div class="col-mg- col-lg-1"></div>
         </section>
-        <ul class="contenido">
-            <li>Hogar</li>
-            <li>Oficinas / Locales</li>
-            <li>Diseño de muebles</li>
-            <li>Vidrieras</li>
-            <li>Eventos sociales y empresariales</li>
-        </ul>
+        <section class="container-fluid">
+            <div class="row">
+                <div class="col-lg-4"></div>
+                <div class="col-lg-4"></div>
+                    <ul class="contenido">
+                        <li>Hogar</li>
+                        <li>Oficinas / Locales</li>
+                        <li>Diseño de muebles</li>
+                        <li>Vidrieras</li>
+                        <li>Eventos sociales y empresariales</li>
+                    </ul>
+                </div>
+                <div class="col-lg-4"></div>
+            </div>
+        </section>
     </main>
     <footer>
         <div class="container-fluid">
