--- a/index.html
+++ b/index.html
@@ -53,10 +53,12 @@
     </header>
     <main>
         <!--iNTRO A LA PÁGINA-->
-        <div class="portada__texto">
+        <div class="container">
+            <div class="col-mg- col-lg-8">
             <h1 class="titulo">DISEÑOS SIMPLES Y ELEGANTES</h1>
             <p class="subtitulo">Nuestro propósito está en diseñar esos rincones que invitan a compartir</p>
-        </div>
+            </div>
+            <div class="col-mg- col-lg-2"></div>
         <div class="container-fluid">
             <!--
                 <div id="paleta-cromatica">
@@ -67,26 +69,26 @@
                 </div>
             -->
             <div class="row">
-                <div class="col-mg- col-lg-2"></div>
-                <div class="col-2">
+                <div class="col-3">
                     <section class="ambientes-portada__1">
                         <img src="./assets/img/inicio/ambientes-portada-1.jpg" alt="ambientes-portada-1" width="300px">
                     </section>
                     <div id="primer-paleta"></div>
                 </div>
-                <div class="col-2">
+                <br>
+                <div class="col-3">
                     <section class="ambientes-portada__2">
                         <img src="./assets/img/inicio/ambientes-portada-2.jpg" alt="ambientes-portada-2" width="300px">
                     </section>
                     <div id="segunda-paleta"></div>
                 </div>
-                <div class="col-2">
+                <div class="col-3">
                     <section class="ambientes-portada__3">
                         <img src="./assets/img/inicio/ambientes-portada-3.jpg" alt="ambientes-portada-3" width="340px">
                     </section>
                     <div id="tercer-paleta"></div>
                 </div>
-                <div class="col-2">
+                <div class="col-3">
                     <section class="ambientes-portada__4">
                         <img src="./assets/img/inicio/ambientes-portada-4.jpg" alt="ambientes-portada-4" width="340px">
                     </section>
