Cambios en gral.

--- a/index.html
+++ b/index.html
@@ -19,40 +19,39 @@
         <div class="container">
             <ul class="nav">
                 <li class="nav-item">
-                <a class="nav-link" href="./index.html">Home
+                <a class="nav-link color-blanco" href="./index.html">Home
                     </a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" href="./pages/servicios.html">Servicios
+                <a class="nav-link color-blanco" href="./pages/servicios.html">Servicios
                     </a>
                 </li>
-                <!--REVISAR
-                    <div class="btn-group">
-                        <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
-                        Servicios
-                        </button>
-                        <div class="dropdown-menu">
-                            <a class="dropdown-item" href="#">Hogar</a>
-                            <a class="dropdown-item" href="#">Oficinas/Locales</a>
-                            <a class="dropdown-item" href="#">Eventos sociales y empresariales</a>
-                        </div>
+                <li class="nav-item">
+                <a class="nav-link color-blanco" href="./pages/equipo.html">Equipo
+                    </a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link color-blanco" href="./pages/blog.html">Blog</a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link color-blanco" href="./pages/contacto.html">Contacto</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      Dropdown
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                      <a class="dropdown-item" href="#">Action</a>
+                      <a class="dropdown-item" href="#">Another action</a>
+                      <div class="dropdown-divider"></div>
+                      <a class="dropdown-item" href="#">Something else here</a>
                     </div>
-                -->
-                <li class="nav-item">
-                <a class="nav-link" href="./pages/equipo.html">Equipo
-                    </a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link" href="./pages/blog.html">Blog</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link" href="./pages/contacto.html">Contacto</a>
-                </li>
+                  </li>
             </ul>
         </div>
     </header>
     <main>
-        <!--iNTRO A LA PÁGINA-->
+        <!--INTRO A LA PÁGINA-->
         <div class="container">
             <div class="col-mg- col-lg-8">
             <h1 class="titulo">DISEÑOS SIMPLES Y ELEGANTES</h1>
@@ -60,14 +59,6 @@
             </div>
             <div class="col-mg- col-lg-2"></div>
         <div class="container-fluid">
-            <!--
-                <div id="paleta-cromatica">
-                    <div id="primer-paleta"></div>
-                    <div id="segunda-paleta"></div>
-                    <div id="tercer-paleta"></div>
-                    <div id="cuarta-paleta"></div>
-                </div>
-            -->
             <div class="row">
                 <div class="col-3">
                     <section class="ambientes-portada__1">
@@ -98,53 +89,6 @@
             </div>
         </div>
     </main>
-    <!-- PRIMER GRID
-    <main class="grid__template">
-        <section class="portada-texto">
-            <h1 class="titulo">DISEÑOS SIMPLES Y ELEGANTES</h1>
-            <p class="subtitulo">Nuestro propósito está en diseñar esos rincones que invitan a compartir</p>
-        </section>
-        <div class="contenido">
-            <img src="./assets/img/inicio/ambientes-portada-1.jpg" alt="ambientes-portada-1" width="300px">
-            <img src="./assets/img/inicio/ambientes-portada-2.jpg" alt="ambientes-portada-2" width="300px">
-            <img src="./assets/img/inicio/ambientes-portada-3.jpg" alt="ambientes-portada-3" width="340px">
-            <img src="./assets/img/inicio/ambientes-portada-4.jpg" alt="ambientes-portada-4" width="340px">
-        </div>
-        <div id="paleta-cromatica">
-            <div id="primer-paleta"></div>
-            <div id="segunda-paleta"></div>
-            <div id="tercer-paleta"></div>
-            <div id="cuarta-paleta"></div>
-        </div>
-    </main>
-    -->
-    <!--GRID FINAL (Por definición de Áreas)-->
-    <!-- MAIN CON GRID
-    <main id="grilla">
-        <div class="portada__texto">
-            <h1 class="titulo">DISEÑOS SIMPLES Y ELEGANTES</h1>
-            <p class="subtitulo">Nuestro propósito está en diseñar esos rincones que invitan a compartir</p>
-        </div>
-        <div id="paleta-cromatica">
-            <div id="primer-paleta"></div>
-            <div id="segunda-paleta"></div>
-            <div id="tercer-paleta"></div>
-            <div id="cuarta-paleta"></div>
-        </div class="container-fluid">
-        <section class="ambientes-portada__1">
-            <img src="./assets/img/inicio/ambientes-portada-1.jpg" alt="ambientes-portada-1" width="300px">
-        </section>
-        <section class="ambientes-portada__2">
-            <img src="./assets/img/inicio/ambientes-portada-2.jpg" alt="ambientes-portada-2" width="300px">
-        </section>
-        <section class="ambientes-portada__3">
-            <img src="./assets/img/inicio/ambientes-portada-3.jpg" alt="ambientes-portada-3" width="340px">
-        </section>
-        <section class="ambientes-portada__4">
-            <img src="./assets/img/inicio/ambientes-portada-4.jpg" alt="ambientes-portada-4" width="340px">
-        </section>
-    </main>
-    -->
     <footer class="contenedor-footer"> <!--Agregar NEWSLETTER y formas de pago-->
         <div>
             <a href="https://www.instagram.com/dk.interioresyespacios">dk.interioresyespacios</a>
@@ -153,6 +97,8 @@
             <p>dk.interioresyespacios@gmail.com</p>
         </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
