--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -51,6 +51,7 @@
             <div class="row">
                 <div class="col-lg-4"></div>
                 <div class="col-lg-4"></div>
+                <!--DISEÑAR COMO CARDS-->
                     <ul class="contenido">
                         <li>Hogar</li>
                         <li>Oficinas / Locales</li>
